--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/checkout@v1
       - run : npm install
       - run : npm run build
-      - run : sudo rm -r /var/www/html/help-center/build
-      - run : sudo mv /home/aakash/actions-runner-help/_work/help-center/help-center/build /var/www/html/help-center/
-      - run : sudo cp /var/www/.htaccess /var/www/html/help-center/build
+      - run : sudo rm -r /var/www/help/build
+      - run : sudo mv /home/mbe/actions-runner-one/_work/help-center/help-center/build /var/www/help/
+      - run : sudo cp /var/www/.htaccess /var/www/help/build
 
+
+      
